--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   top: 100%;
-  background: rgba(47,53,79,0.9);
+  background: rgba(19,155,60,0.9);
   height: 100vh;
   transform: translateY(-50px);
   transition: 0.3s transform, 0.3s opacity;
@@ -45,7 +45,7 @@
   display: none;
 }
 .menu-checkbox:checked ~ .header {
-  background: rgba(47,53,79,0.9);
+  background: rgba(19,155,60,0.9);
 }
 .menu-checkbox:checked ~ .header .menu-open {
   background-image: url("../images/icon-close.svg");
@@ -68,7 +68,7 @@
     background: initial;
   }
   .menu a {
-    color: var(--veryDarkBlue);
+    color: var(--veryDarkGreen);
   }
   .menu li {
     border: none;
@@ -78,7 +78,7 @@
     border-radius: 0.5em;
     margin-top: 0;
     padding: 0.7em 2em;
-    background: var(--softRed);
+    background: var(--softGreen);
     color: #fff;
     margin-left: 2em;
   }
